force-app/main/default/objects/Invoice__c/fields/Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>Balance_Paid__c</fullName>
    <inlineHelpText>The Date the Balance was paid. Do not manually update this field. It will be updated by setting the Invoice Stage to &quot;Balance Paid&quot;</inlineHelpText>
    <label>Balance Paid</label>
    <type>Date</type>
</CustomField>