force-app/main/default/objects/Invoice__c/fields/Balance_still_due__c.field-meta.xml
<CustomField>
    <fullName>Balance_still_due__c</fullName>
    <description>The Balance Still Owing for this Performance</description>
    <formula>IF(ISBLANK(Deposit_Paid__c),
  ((Subtotal__c - Discount_Amount__c - Credit_Notes__c) * (1 - Deposit__c)) + 
  (((Subtotal__c - Discount_Amount__c - Credit_Notes__c) * (1 - Deposit__c)) * VAT__c) - 
  Balances_Received__c, Total_Incl_VAT__c-Balances_Received__c- Deposits_Received__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance still due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>