force-app/main/default/objects/Invoice__c/fields/Balances_Received__c.field-meta.xml
<CustomField>
    <fullName>Balances_Received__c</fullName>
    <inlineHelpText>The Total mount of Balance Payments Received</inlineHelpText>
    <label>Balances Received</label>
    <summarizedField>Payments_Received__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payments_Received__c.Type__c</field>
        <operation>equals</operation>
        <value>Balance</value>
    </summaryFilterItems>
    <summaryForeignKey>Payments_Received__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>