force-app/main/default/objects/Invoice__c/fields/Booking_Form__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Form</label>
    <referenceTo>Booking_Form__c</referenceTo>
    <relationshipLabel>Invoice</relationshipLabel>
    <relationshipName>Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>