force-app/main/default/objects/Invoice__c/fields/Credit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Credit_Notes__c</fullName>
    <label>Credit Notes</label>
    <summarizedField>Invoice_Credit_Note__c.Total_Price__c</summarizedField>
    <summaryForeignKey>Invoice_Credit_Note__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>