force-app/main/default/objects/Invoice__c/fields/Deductibles__c.field-meta.xml
<CustomField>
    <fullName>Deductibles__c</fullName>
    <inlineHelpText>Amounts deductible from the Artist&apos;s income</inlineHelpText>
    <label>Deductibles</label>
    <summarizedField>Invoice_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Total_Price__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>