force-app/main/default/objects/Invoice__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <description>The percentage of the quote to be paid as a deposit</description>
    <label>Deposit [%]</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>