force-app/main/default/objects/Invoice__c/fields/Deposit_Amount_Received__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Received__c</fullName>
    <inlineHelpText>Only fill this in if the Deposit received is different from the expected Deposit Amount</inlineHelpText>
    <label>Deposit Amount Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>