force-app/main/default/objects/Invoice__c/fields/Deposit_Paid__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Paid__c</fullName>
    <inlineHelpText>The Date the Deposit was paid. Do not manually update this field. It will be updated by setting the Invoice Stage to &quot;Deposit Paid&quot;</inlineHelpText>
    <label>Deposit Paid</label>
    <type>Date</type>
</CustomField>