force-app/main/default/objects/Invoice__c/fields/Deposit_Still_Due__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Still_Due__c</fullName>
    <description>The Deposit payable for this invoice</description>
    <formula>IF(ISBLANK(Deposit_Paid__c),Total_Incl_VAT__c*Deposit__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Still Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>