force-app/main/default/objects/Invoice__c/fields/Deposits_Received__c.field-meta.xml
<CustomField>
    <fullName>Deposits_Received__c</fullName>
    <description>A roll up from Payments received showing the the Amountof Deposits received</description>
    <label>Deposits Received</label>
    <summarizedField>Payments_Received__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Payments_Received__c.Type__c</field>
        <operation>equals</operation>
        <value>Deposit</value>
    </summaryFilterItems>
    <summaryForeignKey>Payments_Received__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>