force-app/main/default/objects/Invoice__c/fields/Discountable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discountable_Amount__c</fullName>
    <label>Discountable Amount</label>
    <summarizedField>Invoice_Line_Item__c.Price_per_unit__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Include_in_discount__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>