force-app/main/default/objects/Invoice__c/fields/Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Display_Name__c</fullName>
    <description>The Name Displayed in PDF Butler based on the Invoice Record Type</description>
    <formula>CASE( RecordType.DeveloperName ,
					&apos;Artist_Invoice&apos;,&apos;Artist Invoice&apos;,
					&apos;Credit_Note&apos;,&apos;Credit Note&apos;,
					&apos;Pro-Forma Invoice&apos;
					)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Name</label>
    <type>Text</type>
</CustomField>