force-app/main/default/objects/Invoice__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>The End Date of the invoice period</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>