force-app/main/default/objects/Invoice__c/fields/Invoice_From_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_From_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice From Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an Account that can send Invoices</errorMessage>
        <filterItems>
            <field>Account.Can_send_Quotes_and_Invoices__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice</relationshipLabel>
    <relationshipName>Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>