force-app/main/default/objects/Invoice__c/fields/Invoice_To__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Invoice</relationshipLabel>
    <relationshipName>Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>