force-app/main/default/objects/Invoice__c/fields/Invoice_To_Account__c.field-meta.xml
<CustomField>
    <fullName>Invoice_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice (Invoice To Account)</relationshipLabel>
    <relationshipName>Invoice_To</relationshipName>
    <type>Lookup</type>
</CustomField>