force-app/main/default/objects/Invoice__c/fields/Is_Technical_Invoic__c.field-meta.xml
<CustomField>
    <fullName>Is_Technical_Invoic__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that this invoice is for technical fees, eg Sound and Lighting</inlineHelpText>
    <label>Is Technical Invoice</label>
    <type>Checkbox</type>
</CustomField>