force-app/main/default/objects/Invoice__c/fields/Line_Items_Owed_to_Artist__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Owed_to_Artist__c</fullName>
    <inlineHelpText>A rollup of all Line Items still owed to the Artist</inlineHelpText>
    <label>Line Items Owed to Artist</label>
    <summarizedField>Invoice_Line_Item__c.Price_per_unit__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Owed_to_Artist__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>