force-app/main/default/objects/Invoice__c/fields/Master_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Master_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Invoice That this Credit Note was created from</inlineHelpText>
    <label>Master Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>