force-app/main/default/objects/Invoice__c/fields/Owed_by_Artist__c.field-meta.xml
<CustomField>
    <fullName>Owed_by_Artist__c</fullName>
    <formula>Owed_to_Record_Company__c + Owed_to_Vocal_Events__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owed by Artist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>