force-app/main/default/objects/Invoice__c/fields/Owed_to_Artist__c.field-meta.xml
<CustomField>
    <fullName>Owed_to_Artist__c</fullName>
    <formula>IF( RecordType.DeveloperName = &apos;Statement&apos;,
	Subtotal__c + Line_Items_Owed_to_Artist__c - Owed_to_Record_Company__c -  Owed_to_Vocal_Events__c ,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Amount Payable to the Artist</inlineHelpText>
    <label>Owed to Artist</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>