force-app/main/default/objects/Invoice__c/fields/Owed_to_Record_Company__c.field-meta.xml
<CustomField>
    <fullName>Owed_to_Record_Company__c</fullName>
    <formula>Subtotal__c *  Record_Company_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owed to Record Company</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>