force-app/main/default/objects/Invoice__c/fields/Owed_to_Vocal_Events__c.field-meta.xml
<CustomField>
    <fullName>Owed_to_Vocal_Events__c</fullName>
    <formula>Subtotal__c * Vocal_Events_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owed to Vocal Events</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>