force-app/main/default/objects/Invoice__c/fields/Record_Company_Commission__c.field-meta.xml
<CustomField>
    <fullName>Record_Company_Commission__c</fullName>
    <label>Record Company Commission (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>