force-app/main/default/objects/Invoice__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The start date of the invoice period</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>