force-app/main/default/objects/Invoice__c/fields/Subtotal__c.field-meta.xml
<CustomField>
    <fullName>Subtotal__c</fullName>
    <label>Subtotal</label>
    <summarizedField>Invoice_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Owed_to_Artist__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>