force-app/main/default/objects/Invoice__c/fields/Total_before_deductibles__c.field-meta.xml
<CustomField>
    <fullName>Total_before_deductibles__c</fullName>
    <inlineHelpText>The Total Income before deductibles</inlineHelpText>
    <label>Total before deductibles</label>
    <summarizedField>Invoice_Line_Item__c.Total_Price__c</summarizedField>
    <summaryFilterItems>
        <field>Invoice_Line_Item__c.Total_Price__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Invoice_Line_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>