force-app/main/default/objects/Invoice__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <formula>Invoice_Date__c + 5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Until</label>
    <type>Date</type>
</CustomField>