force-app/main/default/objects/Invoice__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>IF(TODAY() &lt; DATE(2025,5,1), 0.15,
IF(Includes_VAT__c,
			IF( Booking_Form__r.Date_of_Performance__c &lt; DATE(2025, 5, 1), 
$Setup.VocalEventsSettings__c.VAT__c,
$Setup.VocalEventsSettings__c.VAT_Post_May_2025__c ),
			0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>