force-app/main/default/objects/Invoice__c/fields/Vocal_Events_Commission__c.field-meta.xml
<CustomField>
    <fullName>Vocal_Events_Commission__c</fullName>
    <label>Vocal Events Commission (%)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>