force-app/main/default/objects/Invoice__c/recordTypes/Artist_Invoice.recordType-meta.xml
<RecordType>
    <fullName>Artist_Invoice</fullName>
    <active>true</active>
    <description>Used to Invoice Artist monthly commissions</description>
    <label>Artist Invoice</label>
</RecordType>