force-app/main/default/objects/Invoice__c/listViews/All_Artist_Invoices.listView-meta.xml
<ListView>
    <fullName>All_Artist_Invoices</fullName>
    <columns>NAME</columns>
    <columns>Owed_to_Record_Company__c</columns>
    <columns>Owed_to_Vocal_Events__c</columns>
    <columns>Owed_by_Artist__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Artist_Invoice</value>
    </filters>
    <label>All Artist Invoices</label>
</ListView>