force-app/main/default/objects/Invoice__c/listViews/Credit_Notes.listView-meta.xml
<ListView>
    <fullName>Credit_Notes</fullName>
    <columns>NAME</columns>
    <columns>Invoice_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Invoice__c.Credit_Note</value>
    </filters>
    <label>Credit Notes</label>
</ListView>